Fixed routing issues

--- a/pages/home.html
+++ b/pages/home.html
@@ -11,23 +11,33 @@ Home page for a dating site-->
 </head>
     <body>
     <div class="container">
+        <div class="row">
+            <div class="col">
+                <div>
+                    <h1>Meet Your Match</h1>
 
-        <div class="jumbotron">
-            <h1>Meet Your Match</h1>
+                    <p>Welcome to the web's most successful dating website. At
+                        <strong>Meet Your Match</strong>, you'll meet other like-minded individuals.
+                        We have the highest success rate or couples on the web.
+                        User's arematched by interests and location. Find out why so many
+                        others have found love on our site!</p><br>
 
-            <p>Welcome to the web's most successful dating website. At
-            <strong>Meet Your Match</strong>, you'll meet other like-minded individuals.
-            We have the highest success rate or couples on the web.
-            User's arematched by interests and location. Find out why so many
-            others have found love on our site!</p><br>
+                    <h4>Hear what our users are saying about us</h4>
+                    <hr>
+                    <p><i>"I met the love of my life after only a month!" - Andrea</i></p>
+                    <p><i>"It was so easy to set up a profile and start meeting people.
+                        I didn't realize how many others were looking for love in my area." - John</i></p>
+                    <p><i>"Just try it! You'll never be the same!" - Sarah</i></p>
+                    <hr>
 
-            <h4>Hear what our users are saying about us</h4>
-            <hr>
+                    <a href="./personal-info"><button type="button" class="btn btn-light btn-lg">Create a Profile!</button></a>
 
-            <button type="button" class="btn btn-light btn-lg btn-block">Create a profile</button>
+                </div>
+            </div>
+            <div class="col">
+                <img src="../dating/images/couple.jpg" alt="couple">
+            </div>
         </div>
-
-        <img src="../dating/images/couple.jpg" alt="couple">
 
     </div>
 
